brought RequestControllerTest up to 100 percent coverage